# vos

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  book.toml  deny.toml  justfile  raft_vs_merkle-crdt.txt
actors/_chronos_crypto_spike/: Cargo.toml
actors/_chronos_crypto_spike/.cargo/: config.toml
actors/_chronos_crypto_spike/src/: lib.rs
actors/_crypto_spike/: Cargo.toml
actors/_crypto_spike/src/: lib.rs
actors/_mls_spike/: Cargo.toml
actors/_mls_spike/src/: lib.rs
actors/chronos/: Cargo.toml
actors/chronos/src/: beacon.rs  committee.rs  consts.rs  lib.rs  roles.rs  rows.rs  tests.rs
actors/clerk-bridge/: Cargo.toml
actors/clerk-bridge/src/: lib.rs  roles.rs  window.rs
actors/clerk-ledger/: Cargo.toml
actors/clerk-ledger/src/: lib.rs  oracle.rs  roles.rs  smt.rs  status.rs  tests.rs  view.rs  wire.rs
actors/clerk-settle/: Cargo.toml
actors/clerk-settle/src/: lib.rs  roles.rs  store.rs
actors/dev-project/: Cargo.toml
actors/dev-project/.cargo/: config.toml
actors/dev-project/dev-ast/: Cargo.toml
actors/dev-project/src/: lib.rs
actors/dev-project/tests/: host_smoke.rs
actors/messenger/: Cargo.toml  README.md
actors/messenger/.cargo/: config.toml
actors/messenger/src/: clients.rs  crypto_provider.rs  host_rand.rs  identity.rs  lib.rs  mls.rs  rows.rs  runtime.rs  store.rs  tick.rs
actors/messenger/tests/: e2e.rs  retry.rs
actors/msg-log/: Cargo.toml
actors/msg-log/src/: consts.rs  lib.rs  roles.rs  rows.rs  tests.rs
actors/registry/: Cargo.toml
actors/registry/src/: main.rs
actors/space-authority/: Cargo.toml
actors/space-authority/.cargo/: config.toml
actors/space-authority/src/: lib.rs
actors/space-registry/: Cargo.toml
actors/space-registry/src/: lib.rs
clerk-witness/: Cargo.toml
clerk-witness/src/: lib.rs
clerk-witness/tests/: parity.rs
crates/merkle-crdt/: Cargo.toml
crates/merkle-crdt/examples/: chat.rs  g_set.rs
crates/merkle-crdt/src/: cid.rs  clock.rs  crdt.rs  encode.rs  hasher.rs  lib.rs  node.rs  store.rs  store_redb.rs  sync.rs
crates/pvm-actors/: Cargo.toml
crates/pvm-actors-macros/: Cargo.toml
crates/pvm-actors-macros/src/: lib.rs
crates/pvm-actors/src/: actor.rs  context.rs  envelope.rs  executor.rs  lib.rs  reply.rs
crates/pvm-actors/tests/: counter.rs
crates/pvm-executor/: Cargo.toml
crates/pvm-executor/src/: lib.rs  manifest.rs  pvm_driver.rs  registry.rs  scheduler.rs  syscall_handler.rs  vfs.rs
crates/pvm-executor/tests/: pvm_driver.rs  scheduler.rs
crates/pvx-actors-macros/: Cargo.toml
crates/pvx-actors-macros/src/: lib.rs
merkle-crdt/: Cargo.toml  README.md
merkle-crdt/examples/: chat.rs  g_set.rs
merkle-crdt/src/: cid.rs  clock.rs  lib.rs  node.rs  sync.rs
os/: Cargo.toml
os/src/: lib.rs  pacman.rs  ports.rs  sensors.rs  shell.rs  types.rs  vm.rs
os/src/net/: dummy.rs
os/src/ports/: http.rs  ssh.rs  web.rs
vos/: Cargo.toml
vos-macros/: Cargo.toml
vos-macros/src/: lib.rs
vos-raft/: CHANGELOG.md  Cargo.toml
vos-raft/src/: log_entry.rs  role.rs  testutil.rs
vos-raft/tests/: no_std_build.rs  proptest_invariants.rs
vos-shell/: Cargo.toml
vos-shell/src/: actor_cmd.rs  backend.rs  discovery.rs  engine.rs  lib.rs  sandbox.rs  tui.rs  value_bridge.rs
vos-shell/tests/: engine.rs
vos/examples/: io_hash_vectors.rs
vos/src/: attestation.rs  chronos.rs  chronos_feed.rs  commit.rs  crdt.rs  data_layer.rs  effect_log.rs  effects.rs  extension.rs  jobs.rs  lib.rs  log_impl.rs  node.rs  provable.rs  pvm_image.rs  refine_payload.rs  registry.rs  registry_canon.rs  runtime.rs  task_abi.rs  worker.rs  zk.rs
vos/src/abi/: hostcall.rs  mod.rs  service.rs
vos/tests/: chronos_transpile.rs  clerk_proof_public_pin.rs  crypto_spike_pvm.rs  elf_integration.rs  messenger_pvm.rs  messenger_transpile.rs  mls_spike_transpile.rs  proof_blob_cross_node.rs  registry_transpile.rs  typed_args.rs  v2_service_pvm.rs
vosx/: Cargo.toml  Containerfile  README.md  build.rs
vosx/blobs/: dev_project.elf  space_authority.pvm  space_registry.elf
vosx/src/: blob_store.rs  bundled.rs  cli_cache.rs  identity.rs  main.rs  output.rs  paths.rs  secure_file.rs  shutdown.rs  spaces_index.rs  token.rs
vosx/templates/: space.toml.tmpl
vosx/tests/: auth_smoke.rs  console_e2e.rs  gateway_pvm_e2e.rs  onboarding_e2e.rs  shutdown_smoke.rs
wink/: Cargo.toml
wink/src/: lib.rs  logger.rs
writ/: Cargo.toml
writ/src/: lib.rs  logger.rs  protocol.rs  storage.rs  task.rs
zkpvm/: BENCHMARKS.md  Cargo.toml  PERF_ROADMAP.md  README.md  SECURITY.md  STATUS.md  STWO_MERKLE_LIFTED_OOB_ISSUE_DRAFT.md  STWO_UPSTREAM_ISSUE_DRAFT.md
zkpvm/benches/: actors.rs  prove.rs
zkpvm/derive/: Cargo.toml
zkpvm/docs/: status.md
zkpvm/examples/: multi_segment.rs  prove_and_verify.rs
zkpvm/fuzz/: .gitignore  Cargo.toml
zkpvm/precompiles/: Cargo.toml
zkpvm/recursion-verifier/: Cargo.toml  README.md
zkpvm/settlement-verifier/: Cargo.toml  README.md  riscv64em-javm.json
zkpvm/src/: actor.rs  bench_helpers.rs  boundary_binding.rs  framework_access.rs  lib.rs  page_merkle.rs  program_id.rs  proof.rs  prove.rs  recursion_pcs.rs  segment.rs  side_note.rs  verify.rs
zkpvm/tests/: add64_e2e.rs  alu_negative.rs  bench_prove.rs  bitmanip.rs  blake2b_boundary_gate.rs  boundary_binding.rs  chain_standalone.rs  channel_chip.rs  chip_isolated.rs  comb_value_sweep.rs  control_flow.rs  control_flow_negative.rs  cpu_ts_chain_gate.rs  cross_chip_logup.rs  deep_quotient_chip.rs  fixed_point_join.rs  fri_fold_chain.rs  fri_fold_chip.rs  fri_twiddle_chip.rs  join_assembly.rs  ledger_readconsistency_gate.rs  loads_signed.rs  memory.rs  memory_merkle_gate.rs  memory_negative.rs  merkle_decommit.rs  merkle_decommit_merged.rs  merkle_decommit_trees.rs  oods_auto_all31.rs  oods_auto_chip.rs  oods_auto_cpu.rs  oods_auto_join31.rs  oods_auto_logup.rs  oods_auto_real_segment.rs  oods_composition_chip.rs  perm_scale.rs  phase2_alu.rs  poseidon2_chip_degree2.rs  poseidon2_m31_channel.rs  poseidon2_pcs_spike.rs  (+31 more)
zkpvm/verifier/: Cargo.toml
zkpvm/verifier-wasm-bench/: .gitignore  Cargo.toml
(+1100 files in other folders)
