[workspace]
resolver = "3"
members = [
    "crates/*",
    # zkpvm-{precompiles,derive,verifier} live nested inside the
    # zkpvm crate's directory tree (the `crates/*` glob is one
    # level deep).
    "crates/zkpvm/precompiles",
    "crates/zkpvm/derive",
    "crates/zkpvm/verifier",
    "crates/workers/http-gateway",
    "examples/workers/*",
]
exclude = [
    "examples/agents/*",
    "examples/actors/*",
    "examples/actors/crdt-counter",
    "examples/wasm/*",
    # Built-in PVM actors (riscv64em-javm target) live alongside
    # the workspace crates but build with their own toolchain.
    # Listing the directory itself keeps `crates/*` from picking
    # it up as a workspace member.
    "crates/actors",
    "crates/actors/registry",
    "crates/actors/space-registry",
    # zkpvm-fuzz uses libfuzzer-sys + panic=abort + nightly-only
    # rustc flags via `cargo fuzz`.  Excluding it from the main
    # workspace keeps `cargo build --workspace` working on stable.
    "crates/zkpvm/fuzz",
    # `crates/workers` is a parent directory holding worker
    # plugins; each sub-crate is listed in `members` explicitly.
    "crates/workers",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Phase 61: fat LTO + single codegen unit for maximum cross-crate
# inlining of stwo's hot SIMD paths.  Measured at log14 MOBILE on
# the reference Intel Core Ultra 7 155H (median of 5 trials):
#
#   | Profile         | Prove   | Build time |
#   |-----------------|---------|------------|
#   | no LTO, codegen-units default | 1.50 s | ~20 s |
#   | thin LTO        | 1.39 s  | ~3.5 min   |
#   | fat LTO         | 1.31 s  | ~3.5 min   |  ← keep
#
# Build time is much slower; for fast iteration, override with
# `cargo build --release --config 'profile.release.lto="off"'` or
# work in dev profile.
[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Internal crates
zkpvm = { path = "crates/zkpvm" }
zkpvm-derive = { path = "crates/zkpvm/derive" }
zkpvm-verifier = { path = "crates/zkpvm/verifier" }
javm = { git = "ssh://git@github.com/olanod/jar.git", rev = "6db1168" }

# Stwo — Phase G of the v2.x migration: pinned to upstream HEAD as of
# 2026-04-30 (`e1286720`).  Captures the post-v2.2.0 perf cluster
# (parallel FFT/quotients/OOD #1304-1306, BaseColumnPool #1342,
# subdomain quotients #1372/#1373, FRI fold parallelization
# #1389/#1392/#1393).  Lifted-protocol degree-≥2 block stands at this
# rev — see crates/zkpvm/STWO_2.2.0_MIGRATION.md.  Phase I rewrites the
# 5 high-bound chips with helper columns to clear the block.
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "e1286720", features = [
    "std",
    "prover",
    "parallel",
] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", rev = "e1286720", features = [
    "std",
    "prover",
    "parallel",
] }

# Common deps
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
rayon = "1.10"
impl-trait-for-tuples = "0.2.2"
