[workspace]
resolver = "3"
members = [
    "vos",
    "vos-macros",
    "vos-raft",
    "vosx",
    "merkle-crdt",
    "zkpvm",
    # zkpvm-{precompiles,derive,verifier} live nested inside the
    # zkpvm crate's directory tree.
    "zkpvm/precompiles",
    "zkpvm/derive",
    "zkpvm/verifier",
    "extensions/dev",
    "extensions/http-gateway",
    "examples/extensions/*",
]
exclude = [
    "examples/agents/*",
    "examples/actors/*",
    "examples/actors/crdt-counter",
    "examples/wasm/*",
    # Built-in PVM actors (riscv64em-javm target) live alongside
    # the workspace crates but build with their own toolchain.
    # Listing the directory itself keeps it from being picked
    # up as a workspace member.
    "actors",
    "actors/space-registry",
    "actors/dev-project",
    # zkpvm-fuzz uses libfuzzer-sys + panic=abort + nightly-only
    # rustc flags via `cargo fuzz`.  Excluding it from the main
    # workspace keeps `cargo build --workspace` working on stable.
    "zkpvm/fuzz",
    # `extensions` is a parent directory holding extension
    # plugins; each sub-crate is listed in `members` explicitly.
    "extensions",
    # http-gateway test fixtures: small in-tree extension crates
    # the e2e test loads via libloading. Excluded from the main
    # workspace so they only build when the e2e test asks for them
    # (via cargo build -p {name} as a setup step).
    "extensions/http-gateway/test_fixtures/mock-registry",
    "extensions/http-gateway/test_fixtures/counter",
    "extensions/http-gateway/test_fixtures/kitchen-sink",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/virto-network/vos"
homepage = "https://github.com/virto-network/vos"
authors = ["Daniel Olano <daniel@olanod.com>"]
readme = "README.md"

# Phase 61: fat LTO + single codegen unit for maximum cross-crate
# inlining of stwo's hot SIMD paths.  Measured at log14 MOBILE on
# the reference Intel Core Ultra 7 155H (median of 5 trials):
#
#   | Profile         | Prove   | Build time |
#   |-----------------|---------|------------|
#   | no LTO, codegen-units default | 1.50 s | ~20 s |
#   | thin LTO        | 1.39 s  | ~3.5 min   |
#   | fat LTO         | 1.31 s  | ~3.5 min   |  ← keep
#
# Build time is much slower; for fast iteration, override with
# `cargo build --release --config 'profile.release.lto="off"'` or
# work in dev profile.
[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Internal crates
zkpvm = { path = "zkpvm" }
zkpvm-derive = { path = "zkpvm/derive" }
zkpvm-verifier = { path = "zkpvm/verifier" }
javm = { git = "ssh://git@github.com/olanod/jar.git", rev = "6db1168" }

# Stwo — Phase G of the v2.x migration: pinned to upstream HEAD as of
# 2026-04-30 (`e1286720`).  Captures the post-v2.2.0 perf cluster
# (parallel FFT/quotients/OOD #1304-1306, BaseColumnPool #1342,
# subdomain quotients #1372/#1373, FRI fold parallelization
# #1389/#1392/#1393).  Lifted-protocol degree-≥2 block stands at this
# rev — see crates/zkpvm/STWO_2.2.0_MIGRATION.md.  Phase I rewrites the
# 5 high-bound chips with helper columns to clear the block.
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "e1286720", features = [
    "std",
    "prover",
    "parallel",
] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", rev = "e1286720", features = [
    "std",
    "prover",
    "parallel",
] }

# Common deps
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
rayon = "1.10"
impl-trait-for-tuples = "0.2.2"
