[workspace]
resolver = "3"
members = [
    "vos",
    "vos/vos-macros",
    "vosx",
    "support/vos-raft",
    "support/vos-shell",
    "support/merkle-crdt",
    "support/jar-revision-check",
    "zkpvm",
    # zkpvm-{precompiles,derive,verifier} live nested inside the
    # zkpvm crate's directory tree.
    "zkpvm/precompiles",
    "zkpvm/derive",
    "zkpvm/verifier",
    "extensions/ai",
    "extensions/dev",
    "extensions/http-gateway",
    "extensions/prover",
    "examples/extensions/*",
]
exclude = [
    "examples/agents/*",
    "examples/actors/*",
    # These specific actor/agent crates define their own `[workspace]` and
    # must be excluded individually so Cargo does not treat them as nested
    # workspace roots inside the main workspace.
    "examples/actors/crdt-counter",
    "examples/agents/scheduler",
    "examples/actors/tally",
    "examples/actors/big-map",
    "examples/actors/committed-counter",
    "tests/fixtures/legacy-v1/actors/crdt-counter",
    "examples/wasm/*",
    # Built-in PVM actors (riscv64em-javm target) live alongside
    # the workspace crates but build with their own toolchain.
    # Listing the directory itself keeps it from being picked
    # up as a workspace member.
    "actors",
    # Protocol infrastructure PVMs are independently locked no_std guests.
    "services/vos-service",
    # The ECVRF primitive crate is its own `[workspace]` (no_std, builds for
    # the actor target too); excluded so a host member path-dep'ing it (vosx)
    # doesn't pull it in as a second workspace root.
    "support/vrf",
    # Every actor crate, incl. those path-dep'd by host members as dev-deps
    # (Cargo would otherwise promote a member's path dep to a member).
    "actors/*",
    # zkpvm-fuzz uses libfuzzer-sys + panic=abort + nightly-only
    # rustc flags via `cargo fuzz`.  Excluding it from the main
    # workspace keeps `cargo build --workspace` working on stable.
    "zkpvm/fuzz",
    # `extensions` is a parent directory holding extension
    # plugins; each sub-crate is listed in `members` explicitly.
    "extensions",
    # http-gateway test fixtures: small in-tree extension crates
    # the e2e test loads via libloading. Excluded from the main
    # workspace so they only build when the e2e test asks for them
    # (via cargo build -p {name} as a setup step).
    "extensions/http-gateway/test_fixtures/mock-registry",
    "extensions/http-gateway/test_fixtures/counter",
    "extensions/http-gateway/test_fixtures/kitchen-sink",
    # Canonical no_std actor PVMs used only by v2 integration gates.
    "vos/tests/fixtures/*",
    # transport-soundness Miri gate: a zero-dep, self-contained crate (own
    # `[workspace]`) run only under `cargo miri test` on the Miri nightly.
    # Excluded so `cargo build --workspace` + the pre-commit hook never try to
    # build it on the default toolchain.
    "miri/transport-soundness",
    # The on-chain settlement verifier: a verify-only Poseidon2-M31 stwo
    # verifier with its OWN `[workspace]`, pinning stwo with
    # `default-features = false`.  Excluded so its feature resolution never
    # co-resolves with javm/prover-stwo (which would drag blst/rayon) — that
    # isolation is what makes it buildable for wasm32/PVM.
    "zkpvm/settlement-verifier",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/virto-network/vos"
homepage = "https://github.com/virto-network/vos"
authors = ["Daniel Olano <daniel@olanod.com>"]
readme = "README.md"

# Release profile: fat LTO + single codegen unit for maximum cross-crate
# inlining of stwo's hot SIMD paths.  Measured at log14 MOBILE on
# the reference Intel Core Ultra 7 155H (median of 5 trials):
#
#   | Profile         | Prove   | Build time |
#   |-----------------|---------|------------|
#   | no LTO, codegen-units default | 1.50 s | ~20 s |
#   | thin LTO        | 1.39 s  | ~3.5 min   |
#   | fat LTO         | 1.31 s  | ~3.5 min   |  ← keep
#
# Build time is much slower; for fast iteration, override with
# `cargo build --release --config 'profile.release.lto="off"'` or
# work in dev profile.
[profile.release]
lto = "fat"
codegen-units = 1

# `cargo test` builds Stwo's SIMD prover and the zkpvm trace/constraint
# code at opt-level 0, where the prover runs several times slower and holds
# its multi-GB FRI working set for longer. Optimize just the proving-hot
# crates (leaving the rest of the workspace at opt-level 0 for fast
# incremental compiles); these crates rarely recompile, so the cost is paid
# once. debug-assertions stay on so zkpvm's internal invariant checks still
# fire in tests. Measured on the reference box: a log14-padded prove drops
# ~4.4s → ~3.5s; turning debug-assertions off on these crates would reach
# ~2.6s (near the ~2.3s fat-LTO release) at the cost of those checks.
# Set under both test (`cargo test`) and dev (`cargo run`/demos) profiles.
[profile.test.package.stwo]
opt-level = 3
[profile.test.package.stwo-constraint-framework]
opt-level = 3
[profile.test.package.zkpvm]
opt-level = 3
[profile.test.package.zkpvm-verifier]
opt-level = 3

[profile.dev.package.stwo]
opt-level = 3
[profile.dev.package.stwo-constraint-framework]
opt-level = 3
[profile.dev.package.zkpvm]
opt-level = 3
[profile.dev.package.zkpvm-verifier]
opt-level = 3

[workspace.dependencies]
# Internal crates
zkpvm = { path = "zkpvm" }
zkpvm-derive = { path = "zkpvm/derive" }
zkpvm-verifier = { path = "zkpvm/verifier" }
# VOS v2 has one execution identity. Every VM, transpiler, tracer, verifier,
# and fuzz harness must use this exact JAR revision (enforced by
# `cargo run -p jar-revision-check`).
javm = { git = "https://github.com/olanod/jar.git", rev = "0e958f98d5b51ed78fbd39a1591b29c04d6cca00", version = "0.4" }
grey-transpiler = { git = "https://github.com/olanod/jar.git", rev = "0e958f98d5b51ed78fbd39a1591b29c04d6cca00", version = "0.1" }

# Stwo pinned to upstream rev `e1286720` (post-v2.2.0 perf cluster:
# parallel FFT/quotients/OOD #1304-1306, BaseColumnPool #1342,
# subdomain quotients #1372/#1373, FRI fold parallelization
# #1389/#1392/#1393). Lifted-protocol degree-≥2 block stands at this
# rev — see zkpvm/STWO_2.2.0_MIGRATION.md.
#
# Declared with NO features here (workspace-inherited features are
# additive — a member can add but never remove them).  Prover-side
# builds get `std,prover,parallel` via zkpvm's `prover` feature
# (`stwo/std` etc. in zkpvm/Cargo.toml); the verifier-only path
# (`zkpvm-verifier` for wasm32) stays feature-less so no rayon/std
# machinery leaks into a verify-only build.
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "e1286720", default-features = false }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", rev = "e1286720", default-features = false }

# Common deps
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
rayon = "1.10"
impl-trait-for-tuples = "0.2.2"
