[package]
name = "merkle-crdt"
description = "Generic no_std implementation of Merkle-CRDTs: Merkle-DAGs meet CRDTs. Used by VOS for the `crdt` consistency mode."
keywords = ["crdt", "merkle", "no-std", "p2p", "vos"]
categories = ["data-structures", "no-std", "algorithms"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []
redb = ["std", "dep:redb"]

[dependencies]
redb = { version = "2", optional = true }

[dev-dependencies]
sha2 = "0.10"
