[package]
name = "vos-os"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", default-features = false }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-io-async = { workspace = true }
futures-concurrency = { workspace = true }
heapless = "0.8.0"
log = { workspace = true }
miniserde = { workspace = true }
rand = { version = "0.8.5", default-features = false }
static_cell = { workspace = true }
wasmtime = { version = "29.0.1" }

edge-net = { version = "0.10.1", optional = true }
embedded-alloc = { version = "0.6.0", optional = true }
# SSH
noline = { version = "0.5.1", optional = true }
sunset = { version = "0.2", git = "https://github.com/mkj/sunset.git", branch = "main", optional = true }
sunset-embassy = { version = "0.2", git = "https://github.com/mkj/sunset.git", branch = "main", optional = true }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["zeroize", "serde"], optional = true }
# Shell
nu-engine = { version = "0.101.0", default-features = false, optional = true }
nu-parser = { version = "0.101.0", default-features = false, optional = true }

mimalloc = { version = "0.1.43", optional = true }

# JS
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.93", default-features = false, optional = true }
wasm-bindgen-futures = { version = "0.4.42", default-features = false, optional = true }
wasm-logger = { version = "0.2.0", default-features = false, optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
]
optional = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
std = [
  "port-http",
  "port-ssh",
  "nu",
  "dep:mimalloc",
  "edge-net/std",
  "embassy-executor/arch-std",
  "embassy-executor/executor-thread",
  "embassy-executor/log",
  "embassy-sync/std",
  "embassy-time/std",
  "rand/std_rng",
]
web = [
  "dep:web-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:wasm-logger",
  "dep:serde-wasm-bindgen",
  "embassy-executor/arch-wasm",
  "embassy-executor/executor-thread",
  "embassy-executor/log",
  "embassy-time/wasm",
  # "getrandom/js",
]
rv = [
  "embassy-executor/arch-riscv32",
  "embassy-executor/executor-thread",
  "embassy-executor/log",
  "rand/std_rng",
]

port-http = ["edge-net/io"]
port-ssh = ["dep:sunset", "dep:sunset-embassy", "dep:ed25519-dalek", "dep:noline"]
nu = ["dep:nu-engine", "dep:nu-parser"]
