[package]
name = "vos-macros"
description = "Derive and attribute macros for vos actors: #[actor], #[messages], #[msg], and the service_main! entry-point macro."
keywords = ["vos", "macros", "actor", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
