[package]
name = "vos"
description = "VOS runtime: a deterministic actor host on a JAM-aligned PVM (RISC-V), with per-agent CRDT or Raft replication, libp2p transport, and content-addressed storage."
keywords = ["vos", "p2p", "actor", "pvm", "crdt"]
categories = ["network-programming", "embedded", "wasm"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[features]
default = ["std", "http", "storage", "network"]
std = ["dep:javm", "dep:grey-transpiler", "dep:toml", "dep:serde", "dep:pollster", "dep:tracing", "dep:tracing-subscriber", "dep:clap", "dep:libloading"]
macros = ["dep:vos-macros"]
pvm = []
service = ["pvm"]
extension = ["macros"]
wasm = ["macros"]
# WASM bootstrap: provides global allocator (dlmalloc) and panic
# handler so the actor crate just needs `#![no_std]` and `use vos::*`.
wasm-bootstrap = ["wasm", "dep:dlmalloc"]
# Enables native HTTP fulfillment (EFFECT_FETCH) in the extension host.
http = ["dep:ureq"]
# Enables redb-backed extension state persistence in the extension host.
storage = ["dep:redb", "dep:merkle-crdt", "dep:futures-executor", "dep:futures-channel", "dep:vos-raft"]
# Enables the libp2p-backed networking layer (peer transport, identity,
# discovery). Pulls a substantial dep tree (libp2p + tokio runtime),
# so it's opt-in. Hosts that want cross-node spaces enable it; bare
# single-node runs (extensions, no_std actors) don't need it.
network = ["std", "dep:libp2p", "dep:tokio", "dep:async-trait"]

[dependencies]
vos-macros = { path = "../vos-macros", version = "0.1.0", optional = true }
vos-raft = { path = "../vos-raft", version = "0.1.0", default-features = false, features = ["std"], optional = true }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
# Logging facade — re-exported as `vos::log` and pulled into
# `vos::prelude::*`. `default-features = false` keeps it usable
# in no_std actor / wasm guests; the std-side host code can use
# the same facade and bridge to tracing if it wants.
log = { version = "0.4", default-features = false }

# std-only: PVM runtime and vosx binary dependencies.
# Both crates are pinned by git rev during local development; the
# `version` is what crates.io uses when the published vos package
# resolves them (the git URL is stripped at publish time).
javm = { git = "https://github.com/olanod/jar.git", rev = "e8861917c03d8f277a03ad8c079acf95c531b3d6", version = "0.4", optional = true }
grey-transpiler = { git = "https://github.com/olanod/jar.git", rev = "e8861917c03d8f277a03ad8c079acf95c531b3d6", version = "0.1", optional = true }
toml = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
libloading = { version = "0.8", optional = true }
ureq = { version = "2", optional = true, default-features = false, features = ["tls"] }
dlmalloc = { version = "0.2", optional = true, features = ["global"] }
redb = { version = "2", optional = true }
merkle-crdt = { path = "../merkle-crdt", version = "0.1.0", features = ["redb"], optional = true }
libp2p = { version = "0.56", default-features = false, features = ["tcp", "yamux", "noise", "tokio", "mdns", "macros", "ping", "identify", "request-response", "gossipsub"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "macros", "time", "fs"], optional = true }
async-trait = { version = "0.1", optional = true }
# Drives vos-raft's async Storage / Transport futures from inside
# the existing sync Network::set_raft_handler / RaftCommit code
# paths. Std-only — gated behind the `storage` feature so no_std
# actor builds (default-features = false) don't drag std into the
# riscv guest.
futures-executor = { version = "0.3", default-features = false, features = ["std"], optional = true }
futures-channel = { version = "0.3", default-features = false, features = ["alloc", "std"], optional = true }

# Backs `vos::crypto::blake2b` on every non-riscv64 target —
# host code, extensions, wasm guests. PVM (riscv64) actors hit
# the host via ECALL_BLAKE2B_COMPRESS and never link this dep.
# Target-conditional so the riscv64 actor build doesn't even
# compile blake2b_simd. `default-features = false` keeps it
# usable from no_std (extension / wasm).
[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
blake2b_simd = { version = "1", default-features = false }

[dev-dependencies]
# `default-features = false` so the `bin` feature stays off — host
# tests just need the `CrdtCounterRef` typed surface from the
# rlib, not the cdylib glue. The vos build for these dev-deps
# pulls vos's own default features (std + http + storage + network)
# via the test crate's own resolution so the integration tests can
# `use vos::runtime::*` etc.
crdt-counter = { path = "../examples/actors/crdt-counter", default-features = false }
# Built-in PVM actor — host tests need the typed `SpaceRegistryRef`
# to drive the registry over the network. `default-features = false`
# keeps the `bin` (PVM entry-point) glue out of the host link;
# tests load the pre-built actor ELF separately and only need the
# Ref surface from the rlib.
space-registry = { path = "../actors/space-registry", default-features = false }
# Same shape — host tests use the typed SpaceBridgeRef to invoke
# the bridge actor's where_am_i / forward handlers over libp2p.
space-bridge = { path = "../actors/space-bridge", default-features = false }
# Used by a single robustness test that hand-corrupts the
# actor's persisted state to simulate schema drift.
redb = "2"
# Reference blake2b implementation for cross-checking the
# vos::crypto software fallback. Dev-only; the in-tree fallback
# is self-contained.
blake2 = "0.10"
