[package]
name = "vos"
description = "VOS runtime: a deterministic actor host on a JAM-aligned PVM (RISC-V), with per-agent CRDT or Raft replication, libp2p transport, and content-addressed storage."
keywords = ["vos", "p2p", "actor", "pvm", "crdt"]
categories = ["network-programming", "embedded", "wasm"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[features]
default = ["std", "http", "storage", "network"]
std = ["dep:javm", "dep:grey-transpiler", "dep:toml", "dep:serde", "dep:pollster", "dep:tracing", "dep:tracing-subscriber", "dep:clap", "dep:libloading", "dep:object", "dep:async-io", "dep:async-executor", "dep:futures-lite", "dep:futures-channel", "dep:futures-rustls", "dep:rustls-pemfile", "dep:getrandom"]
macros = ["dep:vos-macros"]
pvm = []
service = ["pvm"]
service-runtime = ["service"]
# NOTE: the ZK actor-IO binding is tagless (`vos::zk`) — the io-hash
# primitive `compute_io_hash` is pure and always available (guest +
# host).  Proof *verification* (STARK validity ∧ io-binding) lives in
# the `prover` host extension, which depends on `zkpvm-verifier`
# directly; vos itself does not pull a verifier, so there is no
# `zk-verify` feature.
extension = ["macros"]
wasm = ["macros"]
# WASM bootstrap: provides global allocator (dlmalloc) and panic
# handler so the actor crate just needs `#![no_std]` and `use vos::*`.
wasm-bootstrap = ["wasm", "dep:dlmalloc"]
# Enables native HTTP fulfillment (EFFECT_FETCH) in the extension host.
http = ["dep:ureq"]
# Enables redb-backed extension state persistence in the extension host.
storage = ["dep:redb", "dep:merkle-crdt", "dep:futures-executor", "dep:futures-channel", "dep:vos-raft"]
# Enables the libp2p-backed networking layer (peer transport, identity,
# discovery). Pulls a substantial dep tree (libp2p + tokio runtime),
# so it's opt-in. Hosts that want cross-node spaces enable it; bare
# single-node runs (extensions, no_std actors) don't need it.
network = ["std", "dep:libp2p", "dep:tokio", "dep:async-trait", "dep:vrf"]

[dependencies]
vos-macros = { path = "vos-macros", version = "0.1.0", optional = true }
vos-raft = { path = "../support/vos-raft", version = "0.1.0", default-features = false, features = ["std"], optional = true }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
# Logging facade — re-exported as `vos::log` and pulled into
# `vos::prelude::*`. `default-features = false` keeps it usable
# in no_std actor / wasm guests; the std-side host code can use
# the same facade and bridge to tracing if it wants.
log = { version = "0.4", default-features = false }

# std-only: PVM runtime and vosx binary dependencies.
# Both crates are pinned by git rev during local development; the
# `version` is what crates.io uses when the published vos package
# resolves them (the git URL is stripped at publish time).
javm = { workspace = true, optional = true }
grey-transpiler = { workspace = true, optional = true }
toml = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
libloading = { version = "0.8", optional = true }
# Host-side ELF symbol reader — locates a provable actor's `__VOS_WITNESS`
# buffer address (`vos::zk::witness_addr`) so a caller can hand the host
# prover the witness-injection offset. std-only.
object = { version = "0.36", default-features = false, features = ["std", "read_core", "elf"], optional = true }
# Host-side OS entropy for the BOOT_CONTEXT seam: mints a fresh per-boot
# `boot_token` + the host-local `device_id`. `std`-gated — the no_std riscv
# guest reaches the host via the BOOT_CONTEXT ecall and never links this.
getrandom = { version = "0.2", optional = true }
ureq = { version = "2", optional = true, default-features = false, features = ["tls"] }
dlmalloc = { version = "0.2", optional = true, features = ["global"] }
redb = { version = "2", optional = true }
merkle-crdt = { path = "../support/merkle-crdt", version = "0.1.0", features = ["redb"], optional = true }
libp2p = { version = "0.56", default-features = false, features = ["tcp", "yamux", "noise", "tokio", "mdns", "macros", "ping", "identify", "request-response", "gossipsub"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "macros", "time", "fs"], optional = true }
async-trait = { version = "0.1", optional = true }
# ECVRF primitive for the host-side `chronos_feed` feeder: the
# leader's feeder derives a static VRF keypair from `node.key`, enrols pubkeys,
# and posts per-round reveals. no_std pure software; rides the `network`
# feature (the feeder is network-gated). The chronos actor pulls it directly.
vrf = { path = "../support/vrf", optional = true }
# Host-side extension executor: the cooperative scheduler runs host-side,
# driven by `async-io::block_on(LocalExecutor::run(..))`. `LocalExecutor`
# keeps the extension's `!Send` per-task futures on the one thread that owns
# the instance; `async-io`'s single process-global reactor doubles as the
# byte-stream reactor. These sit in the `std` feature tier (NOT
# `network`) because EVERY extension host needs the executor, including
# single-node `std,http,storage` builds with no libp2p. Versions are
# pinned to what libp2p already resolved (async-io 2.6) so the network
# build doesn't fork the dep tree. The no_std extension/wasm builds
# (default-features = false) never enable `std`, so the .so itself stays
# free of these deps.
async-io = { version = "2.6", optional = true }
async-executor = { version = "1.14", optional = true }
# `AsyncReadExt`/`AsyncWriteExt` over `async_io::Async<TcpStream>` for the
# host byte-stream reactor. Already in the tree via async-io; no tree fork.
futures-lite = { version = "2.6", optional = true }
# Host-terminated TLS over the byte-stream reactor. `futures-rustls`
# wraps an accepted `Async<TcpStream>` in a rustls server stream (the `.so` still
# sees plaintext read/write); it re-exports rustls so we don't add a second copy.
# `ring` provider to match the http-gateway's existing choice. `rustls-pemfile`
# parses the operator-supplied cert/key PEM.
futures-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring"] }
rustls-pemfile = { version = "2", optional = true }
# Drives vos-raft's async Storage / Transport futures from inside
# the existing sync Network::set_raft_handler / RaftCommit code
# paths. Std-only — gated behind the `storage` feature so no_std
# actor builds (default-features = false) don't drag std into the
# riscv guest.
futures-executor = { version = "0.3", default-features = false, features = ["std"], optional = true }
futures-channel = { version = "0.3", default-features = false, features = ["alloc", "std"], optional = true }

# Backs `vos::crypto::blake2b` on every non-riscv64 target —
# host code, extensions, wasm guests. PVM (riscv64) actors hit
# the host via ECALL_BLAKE2B_COMPRESS and never link this dep.
# Target-conditional so the riscv64 actor build doesn't even
# compile blake2b_simd. `default-features = false` keeps it
# usable from no_std (extension / wasm).
[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
blake2b_simd = { version = "1", default-features = false }

[dev-dependencies]
# `default-features = false` so the `bin` feature stays off — host
# tests just need the `CrdtCounterRef` typed surface from the
# rlib, not the cdylib glue. The vos build for these dev-deps
# pulls vos's own default features (std + http + storage + network)
# via the test crate's own resolution so the integration tests can
# `use vos::runtime::*` etc.
crdt-counter = { path = "../examples/actors/crdt-counter", default-features = false }
# Storage-type pressure fixture — the e2e drives a #[storage] map far
# past the guest heap through the typed `BigMapRef`.
big-map = { path = "../examples/actors/big-map", default-features = false }
# Committed-storage fixture — the e2e drives a #[storage(committed)]
# map's anchor_kind 0x02 chain through the typed `CommittedCounterRef`.
committed-counter = { path = "../examples/actors/committed-counter", default-features = false }
# Scheduler agent (the vos::agent::Tasks reference orchestrator) and
# the tally Task fixture — dev-deps so host CI compiles their rlibs
# even without the riscv toolchain; the e2e loads their pre-built ELFs
# separately. `default-features = false` keeps the PVM bin glue out.
scheduler = { path = "../examples/agents/scheduler", default-features = false }
tally = { path = "../examples/actors/tally", default-features = false }
# Built-in PVM actor — host tests need the typed `SpaceRegistryRef`
# to drive the registry over the network. `default-features = false`
# keeps the `bin` (PVM entry-point) glue out of the host link;
# tests load the pre-built actor ELF separately and only need the
# Ref surface from the rlib.
space-registry = { path = "../actors/space-registry", default-features = false }
# The channel sequencer's reply types (`CommitOutcome` / `Status`), so the
# in-PVM commit-retry gate can mint byte-identical msg-ctl replies through the
# external-invoke seam and drive `commit_chain_op`'s catch-up loop without a
# live sequencer. `default-features = false` keeps the PVM bin glue out.
msg-ctl = { path = "../actors/msg-ctl", default-features = false }
# Same shape — host tests use the typed SpaceBridgeRef to invoke
# the bridge actor's where_am_i / forward handlers over libp2p.
space-bridge = { path = "../actors/space-bridge", default-features = false }
# Per-bank stateful clerk agent — host tests use ClerkLedgerRef to
# drive bootstrap / create_account / account against the wire ABI.
clerk-ledger = { path = "../actors/clerk-ledger", default-features = false }
# Cross-clerk voucher ingress actor. Host tests use ClerkBridgeRef
# to drive the verify-and-dedup flow. default-features = false
# keeps the PVM bin glue out of the host link; tests load the
# pre-built ELF separately and only need the Ref surface from
# the rlib.
clerk-bridge = { path = "../actors/clerk-bridge", default-features = false }
# Settlement venue actor — host tests use ClerkSettleRef to drive
# register_bank / submit_claim / settle_window against the wire ABI.
# default-features = false keeps the PVM bin glue out; tests load the
# pre-built ELF separately and only need the Ref surface from the rlib.
clerk-settle = { path = "../actors/clerk-settle", default-features = false }
# General-purpose host-side prover extension. Tests drive the federation
# flow (producer transpiles voucher-check.elf + calls prove_chain_segments
# → puts each segment + a manifest in CAS → ships the manifest hash via
# voucher.proof.bytes; verifier bridge dispatches verify_chain against the
# caller-supplied allowlist) and use it as a blob_get probe in
# proof_blob_cross_node.
prover-extension = { path = "../extensions/prover" }
# zkpvm canonical prover + segmentation — the `voucher_check_commitment_
# drift_guard` re-derives the pinned VOUCHER_CHECK_COMMITMENTS by proving
# two canonical segments. Already in the dev-dep graph via prover-extension;
# named directly here so the guard can call it.
zkpvm = { workspace = true }
# Host-side cipher-clerk with `signing` so tests can build
# signed CreateAccount events to push through the ledger. Pulls in
# OsRng-backed signing — fine on host; the actor itself never
# links it (the clerk-ledger crate keeps cipher-clerk on
# default-features = []).
cipher-clerk = { path = "/home/daniel/src/virto/cipher-clerk", default-features = false, features = ["signing", "viewing-keys", "voucher", "notes", "helpers", "settlement"] }
# Used by a single robustness test that hand-corrupts the
# actor's persisted state to simulate schema drift.
redb = "2"
# Reference blake2b implementation for cross-checking the
# vos::crypto software fallback. Dev-only; the in-tree fallback
# is self-contained.
blake2 = "0.10"
# Generates a self-signed `localhost` cert for the host-TLS
# byte-stream guard (the test acts as the rustls client; the host
# terminates TLS and the extension echoes plaintext).
rcgen = "0.13"
# Ciphersuite-1 reference impls for the in-PVM crypto execution gate
# (`vos/tests/crypto_spike_pvm.rs`): the test drives the `crypto_spike` actor's
# `tv_*` handlers and asserts the PVM-computed bytes are bit-exact against these
# host RustCrypto crates. Versions track `actors/_crypto_spike/Cargo.toml`.
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = { version = "0.10", features = ["aes", "alloc"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
